[gd_scene load_steps=2 format=3 uid="uid://save_slot_ui"]

[ext_resource type="Script" path="res://game/scripts/ui/SaveSlotUI.gd" id="1_script"]

[node name="SaveSlotUI" type="CanvasLayer"]
layer = 105
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
offset_left = 116.0
offset_top = 44.0
offset_right = 396.0
offset_bottom = 244.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 10
text = "Save Game"
horizontal_alignment = 1

[node name="SlotsContainer" type="VBoxContainer" parent="Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HelpLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 6
text = "Select slot | Cancel: Back | Tab: Delete"
horizontal_alignment = 1
